# vn2srs

./: Cargo.toml  README.org
bash_helpers/: kirikiri.sh
src/: common.rs  ffxiv.rs  kengakimi.rs  kirikiri.rs  main.rs  nexas.rs  renpy.rs
