[package]
name = "vn2srs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
genanki-rs = "0.4.0"
glob = "0.3.1"
nom = "7"
regex = "1.10.3"
scraper = "0.18.1"
utf16_reader = "0.1.0"
serde_json = "1.0.117"
